2011-07-01  Paul Eggert  <eggert@cs.ucla.edu>

	* vc/ediff-util.el (ediff-calc-command-time): Use time-since
	and float-time.  Say "NNN.NNN seconds" rather than "NNN seconds
	+ NNN microseconds".

	* type-break.el (type-break-time-sum): Rewrite using time-add.

	* play/hanoi.el (hanoi-current-time-float): Remove.
	All uses replaced by float-time.

	* nxml/rng-maint.el (rng-time-function): Rewrite using time-subtract.
	This yields a more-accurate answer.
	(rng-time-to-float): Remove; no longer needed.

	* emacs-lisp/timer.el (timer-relative-time): Use time-add.

	* calendar/timeclock.el (timeclock-seconds-to-time):
	Defalias to seconds-to-time, since they're the same thing.

	* emacs-lisp/elp.el (elp-elapsed-time):
	* emacs-lisp/benchmark.el (benchmark-elapse):
	* allout-widgets.el (allout-elapsed-time-seconds): Use float-time.

2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* textmodes/flyspell.el (flyspell-word): Consider words that
	differ only in case as potential doublons (bug#5687).

	* net/soap-client.el (soap-invoke, soap-wsdl-resolve-references):
	Remove two rather uninteresting debugging-like messages to make
	debbugs.el more silent.

	* comint.el (comint-password-prompt-regexp): Accept "Response" as
	a password-like phrase.

2011-06-30  Mastake YAMATO  <yamato@redhat.com>

	* progmodes/cc-guess.el: New file.

	* progmodes/cc-langs.el (c-mode-menu): Added "Style..." submenu.

	* progmodes/cc-styles.el (cc-choose-style-for-mode): New function
	derived from `c-basic-common-init'.

	* progmodes/cc-mode.el (top-level): Require cc-guess.
	(c-basic-common-init): Use `cc-choose-style-for-mode'.

2011-06-30  Lawrence Mitchell  <wence@gmx.li>

	* progmodes/js.el (js-mode): Don't stomp on global settings (bug#8933).

2011-06-30  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-guess-continued-construct):
	Correct the handling of template-args-cont, particularly for when font
	lock is disabled.  Name this case as "CASE G".
